// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<BackgroundTaskDisplay /> > highlights the focused state 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│  1: npm sta.. (PID: 1001)        Close (Ctrl+B) | Kill (Ctrl+K) | List       │
│              (Focused)           (Ctrl+L)                                    │
│ Starting server...                                                           │
│ Log: ~/.gemini/tmp/background-processes/background-1001.log                  │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`<BackgroundTaskDisplay /> > keeps exit code status color even when selected 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│  1: npm sta.. (PID: 1003)        Close (Ctrl+B) | Kill (Ctrl+K) | List       │
│              (Focused)           (Ctrl+L)                                    │
│                                                                              │
│ Select Process (Enter to select, Ctrl+K to kill, Esc to cancel):             │
│                                                                              │
│   1. npm start (PID: 1001)                                                   │
│   2. tail -f log.txt (PID: 1002)                                             │
│ ● 3. exit 0 (PID: 1003) (Exit Code: 0)                                       │
│ Log: ~/.gemini/tmp/background-processes/background-1003.log                  │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`<BackgroundTaskDisplay /> > renders tabs for multiple shells 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  1: npm start  2: tail -f lo...  (PID: 1001)      Close (Ctrl+B) | Kill (Ctrl+K) | List (Ctrl+L) │
│ Starting server...                                                                               │
│ Log: ~/.gemini/tmp/background-processes/background-1001.log                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`<BackgroundTaskDisplay /> > renders the output of the active shell 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│  1: ...  2: ...  (PID: 1001)  Close (Ctrl+B) | Kill (Ctrl+K) | List (Ctrl+L) │
│ Starting server...                                                           │
│ Log: ~/.gemini/tmp/background-processes/background-1001.log                  │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`<BackgroundTaskDisplay /> > renders the process list when isListOpenProp is true 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│  1: npm sta.. (PID: 1001)        Close (Ctrl+B) | Kill (Ctrl+K) | List       │
│              (Focused)           (Ctrl+L)                                    │
│                                                                              │
│ Select Process (Enter to select, Ctrl+K to kill, Esc to cancel):             │
│                                                                              │
│ ● 1. npm start (PID: 1001)                                                   │
│   2. tail -f log.txt (PID: 1002)                                             │
│ Log: ~/.gemini/tmp/background-processes/background-1001.log                  │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`<BackgroundTaskDisplay /> > scrolls to active shell when list opens 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│  1: npm sta.. (PID: 1002)        Close (Ctrl+B) | Kill (Ctrl+K) | List       │
│              (Focused)           (Ctrl+L)                                    │
│                                                                              │
│ Select Process (Enter to select, Ctrl+K to kill, Esc to cancel):             │
│                                                                              │
│   1. npm start (PID: 1001)                                                   │
│ ● 2. tail -f log.txt (PID: 1002)                                             │
│ Log: ~/.gemini/tmp/background-processes/background-1002.log                  │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;
